# iep-2021

./: .gitignore  CMakeLists.txt
include/: entity.hpp  player.hpp  spider.hpp  zombie.hpp
libs/point/: CMakeLists.txt
libs/point/include/: point.hpp
libs/point/src/: point.cpp
src/: entity.cpp  main.cpp  player.cpp  spider.cpp  zombie.cpp
